# gaming.arkena_mod

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.md  vcpkg.json
cmake/: imgui.cmake
doc/: deobfuscate.txt  deobfuscate2.txt  deobfuscate_2021.3.31.3.txt  info.md  info.txt  mapping.md  mods.md
include/: il2cpp.hpp
include/analysis/: testing.hpp  testing_header.hpp
include/analysis/testing/: test.hpp  unknown.hpp
include/ark/: class.hpp  core.hpp  discord.hpp  hook.hpp  log.hpp  meta.hpp  mod.hpp  mod_api.hpp  mod_intro.hpp  mods.hpp  module.hpp  platform.hpp  resource.hpp  setting.hpp  ui.hpp  unity.hpp  updater.hpp  utility.hpp  version.hpp
include/ark/mods/: akn.hpp  analysis.hpp  arkrole.hpp  auv.hpp  core.hpp  pranker.hpp  reverse.hpp  rpc.hpp  sniper.hpp  spy.hpp  testing.hpp  tools.hpp  tournament.hpp  whisperer.hpp  zombie.hpp
include/ark/resource/: embed.hpp  generated.hpp
include/ark/ui/: core.hpp  loader.hpp  resource.hpp
include/ark/utility/: console.hpp  d3dhook.hpp  encoding.hpp  function.hpp  hook.hpp  hook_opengl.hpp  logger.hpp  meta.hpp  preprocessor.hpp
include/au/: AbilityButton.hpp  AbilityButtonSettings.hpp  ActionButton.hpp  ActionMapGlyphDisplay.hpp  AddressableLoadWrapper.hpp  AmongUsClient.cpp  AmongUsClient.hpp  ArrowBehaviour.hpp  BanReason.cpp  BanReason.hpp  ButtonBehavior.cpp  ButtonBehavior.hpp  ClientType.cpp  ClientType.hpp  ConnectionMode.cpp  ConnectionMode.hpp  Console.hpp  Controller.hpp  CosmeticData.hpp  CosmeticsLayer.hpp  CustomNetworkTransform.hpp  DeathReason.hpp  DeathType.cpp  DeathType.hpp  DestroyableSingleton.hpp  DiscoverState.cpp  DiscoverState.hpp  EndGameManager.cpp  EndGameManager.hpp  EndGameReason.cpp  EndGameReason.hpp  GameData.cpp  GameData.hpp  GameData_PlayerInfo.cpp  GameData_PlayerInfo.hpp  GameMode.cpp  GameMode.hpp  GameStartManager.cpp  GameStartManager.hpp  GameStartManager_Status.cpp  (+112 more)
include/au/Discord/: Rect.cpp  Rect.hpp
include/au/Hazel/: DataReceivedEventArgs.cpp  DataReceivedEventArgs.hpp  MessageReader.cpp  MessageReader.hpp  MessageWriter.cpp  MessageWriter.hpp  ObjectPool.hpp  SendOption.cpp  SendOption.hpp
include/au/InnerNet/: InnerNetClient.cpp  InnerNetClient.hpp  InnerNetObject.cpp  InnerNetObject.hpp  SpawnFlags.hpp
include/au/PowerTools/: SpriteAnim.hpp  SpriteAnimEventHandler.hpp  SpriteAnimNodeSync.hpp  SpriteAnimNodes.hpp
include/au/System/: Action.hpp  Array.hpp  Comparison.hpp  Delegate.hpp  DelegateData.hpp  EventArgs.cpp  EventArgs.hpp  EventHandler.hpp  Exception.hpp  Func.hpp  Guid.hpp  IFormatProvider.hpp  MonoTypeInfo.hpp  MulticastDelegate.hpp  Nullable.hpp  Object.cpp  Object.hpp  Predicate.hpp  Random.hpp  RuntimeMethodHandle.hpp  RuntimeType.hpp  RuntimeTypeHandle.hpp  Type.hpp  TypeNameKind.hpp  ValueType.hpp
include/au/TMPro/: ColorMode.hpp  Extents.hpp  FontStyles.hpp  FontWeight.hpp  HorizontalAlignmentOptions.hpp  ITextPreprocessor.hpp  MaskingTypes.hpp  TMP.hpp  TextAlignmentOptions.hpp  TextMeshPro.hpp  TextOverflowModes.hpp  TextRenderFlags.hpp  TextureMappingOptions.hpp  VertexGradient.hpp  VertexSortingOrder.hpp  VerticalAlignmentOptions.hpp  WordWrapState.hpp
include/au/UnityEngine/: AdditionalCanvasShaderChannels.hpp  AnimationClip.hpp  AnimationEvent.hpp  AnimationEventSource.hpp  AnimationState.hpp  Animator.hpp  AnimatorClipInfo.hpp  AnimatorCullingMode.hpp  AnimatorOverrideController.hpp  AnimatorStateInfo.hpp  AnimatorUpdateMode.hpp  AudioBehaviour.hpp  AudioClip.hpp  AudioRolloffMode.hpp  AudioSource.hpp  AudioSourceCurveType.hpp  AudioVelocityUpdateMode.hpp  Avatar.hpp  AvatarIKGoal.hpp  AvatarIKHint.hpp  AvatarTarget.hpp  Behaviour.cpp  Behaviour.hpp  Bounds.cpp  Bounds.hpp  Camera.hpp  CameraClearFlags.hpp  CameraType.hpp  Canvas.hpp  CanvasRenderer.hpp  Collider2D.hpp  CollisionDetectionMode2D.hpp  Color.cpp  Color.hpp  Color32.hpp  ColorSpace.cpp  ColorSpace.hpp  Component.cpp  Component.hpp  ContactFilter2D.hpp  (+100 more)
include/autogen/: AmongUsClient.hpp  CustomNetworkTransform.hpp  EndGameManager.hpp  FollowCamera.hpp  GameData.hpp  GameStartManager.hpp  HudManager.hpp  IntroCutscene.hpp  KillButtonManager.hpp  KillOverlay.hpp  MeetingHud.hpp  Network.hpp  Object.hpp  PassiveButton.hpp  PlayerAnimator.hpp  PlayerControl.hpp  PlayerMovement.hpp  PlayerTask.hpp  PlayerVoteArea.hpp  RpcCalls.hpp  ServerInfo.hpp  ServerManager.hpp  ShipStatus.hpp  SpriteRenderer.hpp  UseButton.hpp  Vent.hpp  unknown.hpp
include/autogen/Hazel/: MessageReader.hpp  MessageWriter.hpp
include/autogen/InnerNet/: InnerNetClient.hpp  InnerNetObject.hpp
include/autogen/System/: String.hpp
include/autogen/Unity/: Application.hpp  Behaviour.hpp  Button.hpp  Color.hpp  Component.hpp  GameObject.hpp  Material.hpp  MonoBehaviour.hpp  Object.hpp  Rect.hpp  Renderer.hpp  Rigidbody2D.hpp  Sprite.hpp  SpriteRenderer.hpp  TextRenderer.hpp  Texture.hpp  Texture2D.hpp  Transform.hpp  Vector2.hpp  Vector3.hpp
include/autogen/UnityEngine/: Application.hpp  Behaviour.hpp  Color.hpp  MessageReader.hpp  MessageWriter.hpp  MonoBehaviour.hpp  Object.hpp  Rigidbody2D.hpp  TextRenderer.hpp
include/cs/: array.hpp  intptr.hpp  list.hpp  string.hpp  type.hpp
include/il2cpp/: Il2CppObject.hpp  api.hpp  core.hpp  make_api.hpp  type.hpp
include/upp/: color.hpp  core.hpp  game_object.hpp  network.hpp  object.hpp  rect.hpp  text.hpp  vector2.hpp  vector3.hpp
source/: bin2cpp.cpp  generator.cpp  injector.cpp  launcher.cpp
source/ark/: core.cpp  hook.cpp  library.cpp  log.cpp  meta.cpp  mod.cpp  mod_api.cpp  resource.cpp  udpater.cpp  ui.cpp
source/ark/loader/: version.cpp
source/au/: core.cpp  gamestate.cpp  mod.cpp  player.cpp
source/il2cpp/: api.cpp
tmp/mods/: analysis.cpp  sniper.cpp  spy.cpp  testing.cpp  tournament.cpp  whisperer.cpp  zombie.cpp
tools/: hooker.js  sign.txt
tools/bin2cpp/: main.cpp
tools/generator/: builder.cpp  builder.hpp  filter.hpp  generator.cpp  generator.hpp  klass.cpp  klass.hpp  main.cpp  maps.hpp  meta.cpp  meta.hpp  tmp.md  utility.hpp
tools/loader/: main.cpp  main.hpp  version.cpp
(+155 files in other folders)
